# monolith

./: .dockerignore  .env.example  .gitignore  ARCHIVED.md  CLAUDE.md  DEMO-SCREEN-SETUP.md  DEMO-VIDEO-SCRIPT.md  Dockerfile  README.md  TODO-NEXT-SESSION.md  WATCHPOST_SPEC.md  demo_seed.py  docker-compose.yml  explore_chain.py  fly.toml  litestream.yml  pyproject.toml  test_bug_report_e2e.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
backend/: config.py  main.py
backend/alerts/: discord.py  github_issues.py  service_health.py  subscription_dispatch.py
backend/api/: admin.py  anomalies.py  error_tracker.py  objects.py  orbital_zones.py  public.py  regions.py  reports.py  stats.py  status.py  submit.py  subscriptions.py  systems.py
backend/db/: database.py
backend/detection/: __init__.py  anomaly_scorer.py  assembly_checker.py  base.py  bot_pattern_checker.py  config_change_checker.py  continuity_checker.py  coordinated_buying_checker.py  dead_assembly_checker.py  economic_checker.py  engagement_checker.py  (+15 more)
contracts/: Move.toml  Published.toml
docs/: MAP_ROADMAP.md  MONOLITH_BUILD_BIBLE.md  MONOLITH_HANDOFF.md  aegis-whitepaper.md  convert_pdf.py  frontier-sui-ownership-intel.md  md2pdf.py
eval/: README.md  detection_quality.py  narration_eval.py  system_metrics.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vercel.json  vite.config.js
scripts/: backfill_locations.py  deploy-frontend.sh  deploy.sh  scatter_anomalies.py
tests/: conftest.py  test_main_loops.py  test_provenance.py
(+110 files in other folders)
