[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monolith"
version = "0.5.0"
description = "Blockchain anomaly detector and bug report engine for EVE Frontier"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "AreteDriver"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "anthropic>=0.43.0",
    "aiosqlite>=0.20.0",
    "slowapi>=0.1.9",
    "networkx>=3.0",
    "arete-graph-utils @ git+https://github.com/AreteDriver/arete-graph-utils.git@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
    "respx>=0.22.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101", "S104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
